Primera pagina y favicon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,12 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta charset="utf-8">
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Bienvenido a <%= title %></h1>
+    <p>¡El portal donde podrás crear tus propios juegos!</p>
+    <p>Le animo a jugar</p>
   </body>
 </html>
