--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,6 @@
     <h1>Bienvenido a <%= title %></h1>
     <p>¡El portal donde podrás crear tus propios juegos!</p>
     <p>Le animo a jugar</p>
-    <a href="/quizes/question" >Comienze a jugar</a>
+    <a href="/quizes/question/" >Comienze a jugar</a>
   </body>
 </html>
