--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -7,8 +7,9 @@
   </head>
   <body>
     <h2>Quiz: el juego de las preguntas</h2>
-    
+    <p>
     <%= respuesta %>
-    <a href="/quizes/question">Intentelo otra vez </a>
+    <a href="/quizes/">Volver</a>
+    </p>
   </body>
 </html>
