--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,6 +1,14 @@
-<form method="get" action="/quizes/<%= quiz.id %>/answer">
+<form method="get" action="/quizes/<%= quiz.id %>/answer" />
 
 	Pregunta: <% quiz.pregunta %>
-	 <input type="text" name="respuesta" value="Respuesta"/>
+	 <input type="text" name="respuesta" placeholder="Respuesta"/><br>
+	 <input type="hidden" name="fallos" value="<%=fallos%>" />
+	 	<% if(fallos>=1){ %>
+	 		
+	 	<p id="pista">Pista:<%= quiz.respuesta.charAt(0) %></p>
+	 		
+	 	<% } %>
 	 <input type="submit" value="Enviar">
 </form>
+
+ 
