--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -5,3 +5,10 @@ body             { background: #333; }
 h2 span, section h3 { display: none; }
 body                { font-size: xx-large; }
 footer, input { font-size: large; }
+
+.boton:hover {
+	background-color: lightblue;
+	color: white;
+	border-radius: 10px 10px 10px 10px;
+}
+
