--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,3 +12,10 @@ footer               { background: #eee; text-align: center;}
 nav span { margin: 0px 10px 0px 0px;}
 
 #ErrorMsgs { color: #f61; font-size: smaller; }
+
+.boton:hover {
+	background-color: lightblue;
+	color: white;
+	border-radius: 10px 10px 10px 10px;
+}
+
