--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,16 +1,19 @@
+
+<p>
 <label for="preg" class="rem">Pregunta:</label>
-<input type="text" id="preg" name="quiz[pregunta]"
-<% if(quiz.pregunta) { %>
-value="<%= quiz.pregunta %>"
-<% } else { %>
-placeholder="Pregunta"/>
+<input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>" 
+<% if(!quiz.pregunta) { %>
+	placeholder="Pregunta"
 <% } %>
+ />
+</p>
+<p>
 <label for="resp" class="rem">Respuesta:</label>
-<input type="text" id="resp" name="quiz[respuesta]"
-<% if(quiz.respuesta) { %>
-value="<%= quiz.respuesta %>"
-<% } else { %>
-placeholder="Respuesta"/>
+<input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"
+<% if(!quiz.respuesta) { %>
+	placeholder="Respuesta"
 <% } %>
-<a href="/quizes"><button class="boton" type="button">Cancelar</button></a>
-<input type="submit" value="Salvar">
+ />
+</p>
+<a href="/quizes"><button type="button">Cancelar</button></a>
+<input type="submit" value="Guardar">
