--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,11 +1,11 @@
   <table>
     <% var i; for (i=0;i < quizes.length; i++) { %>
      <tr>
-     	<td><a href="quizes/<%= quizes[i].id %>">
-     		<%= quizes[i].pregunta %></a></td>
-     	<td><a href="quizes/<%= quizes[i].id %>/edit"><button class="boton">editar</button></a></td>
+     	<td><a href="/quizes/<%= quizes[i].id %>">
+     		<%- quizes[i].pregunta %></a></td>
+     	<td><a href="/quizes/<%= quizes[i].id %>/edit"><button class="boton">editar</button></a></td>
      	<td>
-     		<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+     		<form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
      		<button class="boton" type="submit" onclick="return confirm('Borrar: <%= quizes[i].pregunta %>');">borrar</button>
      		</form>
      	</td>
@@ -13,4 +13,4 @@
      </tr>
    <% } %>
   </table>
-  <a href="/quizes/new"><button class="boton" type="button">Crear pregunta</button></a>
+  <a href="/quizes/new"><button class="boton" id="botonAnimacion" type="button">Crear pregunta</button></a>
