--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,14 +1,10 @@
-<form method="get" action="/quizes/<%= quiz.id %>/answer" />
-
-	Pregunta: <% quiz.pregunta %>
-	 <input type="text" name="respuesta" placeholder="Respuesta"/><br>
-	 <input type="hidden" name="fallos" value="<%=fallos%>" />
-	 	<% if(fallos>=1){ %>
-	 		
-	 	<p id="pista">Pista:<%= quiz.respuesta.charAt(0) %></p>
-	 		
-	 	<% } %>
-	 <input type="submit" value="Enviar">
-</form>
-
- 
+<form method="get" action="/quizes/<%= quiz.id %>/answer">
+			<p>Pregunta: <%- quiz.pregunta %></p>
+			<input type="text" name="respuesta" value="Responda aquí">
+			<input type="submit" value="Enviar">
+		</form>
+		<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>
+		<p><strong>Comentarios:</strong></p>
+		<% for(index in quiz.Comments) { %>
+			<p>- <%= quiz.Comments[index].texto %></p>
+		<% } %>
