Registro de usuarios

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,7 @@
   		<header class="main" id="h1">
         <% if(!session.user) { %>
           <span class="right"><a href="/login">Login</a></span>
+          <span class="right"><a href="/user/newUser">New User</a></span>
         <% } else { %>
           <span class="right"> <%= session.user.username %> <a href="/logout">Logout</a></span>
         <% } %>
@@ -30,6 +31,7 @@
     	<nav class="main" id="n1" role="navigation">
     		<span><a href="/">Inicio</a></span>
     		<span><a href="/quizes">Preguntas</a></span>
+        <span><a href="/user">Usuarios</a></span>
     	</nav>
 
     	<section class="main" id="s1">
