--- a/views/user/newUser.ejs
+++ b/views/user/newUser.ejs
@@ -3,12 +3,17 @@
 <form method="POST" action="/user/newUser">
 	<div class="field">
 		<label for="login">New UserName:</label><br>
-		<input type="text" id="login" name="user[username]" size="30" />
+		<input type="text" id="login" name="user[username]" size="30" <% if(user.username) { %> value="<%= user.username %>"<% } %>/>
 	</div>
 
 	<div class="field">
-		<label for="login">New Password:</label><br>
-		<input type="password" id="password" name="user[password]" size="30" />
+		<label for="password">New Password:</label><br>
+		<input type="password" id="password" name="user[password]" size="30" <% if(user.username) { %> value="<%= user.password %>"<% } %>/>
+	</div>
+
+	<div class="field">
+		<label for="password2">New Password:</label><br>
+		<input type="password" id="password2" name="user[password2]" size="30" <% if(user.username) { %> value="<%= user.password %>"<% } %>/>
 	</div>
 
 	<div class="actions">
