--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -3,6 +3,20 @@
 	<% var i; for (i=0;i < User.length; i++) { %>
 	<tr>
 	<td><%= User[i].username %></td>
+	     	<% if(session.user && session.user.username == 'admin') { %>
+	     	<td><a href="/user/<%= User[i].id %>/edit"><button class="boton">editar</button></a></td>
+	     	<% } %>
+
+	     		<% if(session.user && session.user.username == 'admin') { %>
+	     	<td>
+	     		<form method="post" action="/user/<%= User[i].id %>?_method=delete">
+	     		
+	     		<button class="boton" type="submit" onclick="return confirm('Borrar: <%= User[i].username %>');">borrar</button>
+	     		<% } %>
+	     		</form>
+	     	</td>
+	
 	</tr>
 	<% } %>
 </table>
+
