Usuarios modifican su contraseña

--- a/views/user/editUser.ejs
+++ b/views/user/editUser.ejs
@@ -1,6 +1,6 @@
 <h2>Edite el usuario</h2> 
 
 <form method="post" action="/user/<%= user.id %>?_method=put" >
-
-	<% include _form.ejs %>
+	<% include newUser.ejs %>
 </form>
+
